[package]
name = "formajoschismorreo"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
base64 = "0.13"
failure = "0.1.8"
anyhow = "1.0.86"
urlencoding = "2.1.3"
hyper = { version = "0.14.1", features = ["full"] }
